force-app/main/default/objects/Frequent_Flier_Details__c/Frequent_Flier_Details__c.object-meta.xml
<CustomObject>
    <label>Frequent Flier Detail</label>
    <nameField>
        <label>Most Recent Flight</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Frequent Flier Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>