force-app/main/default/objects/Frequent_Flier_Details__c/fields/Additional_Snack__c.field-meta.xml
<CustomField>
    <fullName>Additional_Snack__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Snack?</label>
    <type>Checkbox</type>
</CustomField>