force-app/main/default/objects/Frequent_Flier_Details__c/fields/Arrival_Airport__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Airport__c</fullName>
    <label>Arrival Airport</label>
    <length>3</length>
    <type>Text</type>
</CustomField>