force-app/main/default/objects/Frequent_Flier_Details__c/fields/Checked_Bags__c.field-meta.xml
<CustomField>
    <fullName>Checked_Bags__c</fullName>
    <label>Checked Bags</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>