force-app/main/default/objects/Frequent_Flier_Details__c/fields/Flier_Name__c.field-meta.xml
<CustomField>
    <fullName>Flier_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Flier Name</label>
    <referenceTo>Flier__c</referenceTo>
    <relationshipLabel>Frequent Flier Details</relationshipLabel>
    <relationshipName>Frequent_Flier_Details</relationshipName>
    <type>Lookup</type>
</CustomField>