force-app/main/default/objects/Frequent_Flier_Details__c/fields/Flight_Delayed__c.field-meta.xml
<CustomField>
    <fullName>Flight_Delayed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flight Delayed?</label>
    <type>Checkbox</type>
</CustomField>