force-app/main/default/objects/Frequent_Flier_Details__c/fields/Planned_Snack__c.field-meta.xml
<CustomField>
    <fullName>Planned_Snack__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Planned Snack?</label>
    <type>Checkbox</type>
</CustomField>